# XZGameEngine

./: .gitignore  CMakeLists.txt  README.md  architecture.dot  copy-dlls.ps1  setup.ps1  setup_linux.sh  setup_macos.sh
.github/workflows/: build.yml
assets/: sword_0.glb
src_XZEngine/: CMakeLists.txt  README.md  XZAudio.hpp  XZCamera.hpp  XZDuelAnim.cpp  XZDuelAnim.hpp  XZDuelPlay.cpp  XZDuelPlay.hpp  XZParticleSystem.hpp  XZRenderer.cpp  XZRenderer.hpp  XZRendererDocs.html  XZSwordAnim.hpp  main.cpp
src_XZEngine/shaders/: face.frag  particles3d.vert  postprocess.frag  postprocess.vert  quad.vert  shader.frag  shader.vert  sparkParticles.frag
